--- a/universes.cabal
+++ b/universes.cabal
@@ -32,23 +32,21 @@ common lang
 library
   import:          lang
   exposed-modules:
-    Data.Monoid.Commutative
-    Data.Monoid.Commutative.Free
     Data.Nat
     Data.Nat.Internal
-    Data.Ord.Pre
-    Data.Relationship
+    Data.Semigroup.Abelian
     Data.Semigroup.Bitwise
     Data.Semigroup.GCD
     Data.Semigroup.Intersectional
     Data.Semigroup.LCM
     Data.Semirig
+    Data.Semirig.Bottleneck
     Data.Semirig.Free
     Data.Semiring
+    Data.Semiring.Zhegalkin
 
   build-depends:
     , base        >=4.12    && <5
     , containers  >=0.6.0.1 && <0.7.0.0
-    , witherable  ^>=0.4.1
 
   hs-source-dirs:  src
