--- a/universes.cabal
+++ b/universes.cabal
@@ -45,6 +45,7 @@ library
     Data.Semiring
     Data.Semiring.Zhegalkin
 
+  other-modules:   Data.Yoneda
   build-depends:
     , base        >=4.12    && <5
     , containers  >=0.6.0.1 && <0.7.0.0
