--- a/universes/universes.cabal
+++ b/universes/universes.cabal
@@ -34,19 +34,14 @@ library
   exposed-modules:
     Data.Nat
     Data.Nat.Internal
-    Data.Semigroup.Abelian
-    Data.Semigroup.Bitwise
-    Data.Semigroup.GCD
-    Data.Semigroup.Intersectional
-    Data.Semigroup.LCM
     Data.Semirig
     Data.Semirig.Bottleneck
     Data.Semiring
     Data.Semiring.Zhegalkin
 
   build-depends:
+    , abel        ^>=1.0
     , base        >=4.12    && <5
     , containers  >=0.6.0.1 && <0.7.0.0
-    , these       ^>=1.1.1.1
 
   hs-source-dirs:  src
