--- a/naturals/naturals.cabal
+++ b/naturals/naturals.cabal
@@ -1,7 +1,7 @@
 cabal-version:      3.0
-name:               universes
+name:               naturals
 version:            1.0
-synopsis:           The two universes growing out of semirings.
+synopsis:           Principled treatment of non-negative whole numbers.
 description:        A description will, one day, go here.
 homepage:           https://github.com/kozross/universes
 license:            Apache-2.0
@@ -34,14 +34,10 @@ library
   exposed-modules:
     Data.Nat
     Data.Nat.Internal
-    Data.Semirig
-    Data.Semirig.Bottleneck
-    Data.Semiring
-    Data.Semiring.Zhegalkin
 
   build-depends:
-    , abel        ^>=1.0
-    , base        >=4.12    && <5
-    , containers  >=0.6.0.1 && <0.7.0.0
+    , abel      ^>=1.0
+    , base      >=4.12 && <5
+    , semirigs  ^>=1.0
 
   hs-source-dirs:  src
