Add Lefty and Righty, write first Product instance

--- a/abel/abel.cabal
+++ b/abel/abel.cabal
@@ -38,6 +38,7 @@ library
     Data.Monoid.CMM
     Data.Semigroup.Abelian
     Data.Semigroup.Bitwise
+    Data.Semigroup.Handed
     Data.Semigroup.Intersectional
 
   build-depends:
